--- a/app/views/assignments/index.html.erb
+++ b/app/views/assignments/index.html.erb
@@ -2,6 +2,8 @@
 
 <table>
   <tr>
+    <th>Title</th>
+    <th>Details</th>
     <th></th>
     <th></th>
     <th></th>
@@ -9,6 +11,8 @@
 
 <% @assignments.each do |assignment| %>
   <tr>
+    <td><%= assignment.title %></td>
+    <td><%= assignment.details %></td>
     <td><%= link_to 'Show', assignment %></td>
     <td><%= link_to 'Edit', edit_assignment_path(assignment) %></td>
     <td><%= link_to 'Destroy', assignment, method: :delete, data: { confirm: 'Are you sure?' } %></td>
